# HexaWorld

./: .gitignore  CMakeLists.txt  README.md  constants.hpp  ga.hpp  hex_grid_new.cpp  hex_grid_new.hpp  hexaworld_main.cpp  sfml_renderer.cpp  sfml_renderer.hpp
animals/: fox.cpp  fox.hpp  hare.cpp  hare.hpp  salmon.cpp  salmon.hpp  wolf.cpp  wolf.hpp
